--- a/src/main/webapp/statics/css/website/m/css/style.css
+++ b/src/main/webapp/statics/css/website/m/css/style.css
@@ -138,7 +138,7 @@ input.inp-radio{display:none;}
 .b-radio{color:#333;font-size:0.54rem;width:50%;text-align: center;}
 .b-radio b{background:url(../images/radio.png)no-repeat;background-position:0.1rem 0;width:1rem;height:1rem;background-size:180%;display:inline-block;cursor:pointer;vertical-align:middle;margin-right:0.3rem;overflow:hidden;}
 .bon-radio b{background:url(../images/radio.png)no-repeat;display:inline-block;background-position:-0.9rem 0;width:1rem;height:1rem;background-size:180%;}
-.select_pros{width:100%;margin-top:2%;font-size: 0.54rem;}
+.select_pros{width:100%;margin-top:2% !important;font-size: 0.54rem;}
 .register_btn{width:94%;margin:2% auto 3%;height:1.5rem;background-color:#8f5dbf;color:#fff;font-size:0.6rem;line-height:1.5rem;text-align:center;border-radius:0.3rem;}
 /*注册弹窗*/
 .shade{display:none;width: 100%; height: 100%; position:fixed; top:0; left: 0; background-color: #000; opacity: 0.6; filter: alpha(opacity=60); -ms-filter: "alpha(opacity=30)"; z-index: 135;}
