--- a/src/main/webapp/statics/css/website/m/css/style.css
+++ b/src/main/webapp/statics/css/website/m/css/style.css
@@ -143,8 +143,8 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .bon-radio b{background:url(../images/radio.png)no-repeat;display:inline-block;background-position:-0.9rem 0;width:1rem;height:1rem;background-size:180%;}
 .select_pros{width:100%;margin-top:2%;font-size: 0.54rem;}
 .register_btn{width:94%;margin:2% auto 3%;height:1.5rem;background-color:#8f5dbf;color:#fff;font-size:0.6rem;line-height:1.5rem;text-align:center;border-radius:0.3rem;}
-.register_body #sendButton{width:30%;padding:2%;margin-bottom:1%;background-color:#8f5dbf;color:#fff;text-align:center;border-radius:0.3rem;float:right;font-size:0.54rem;}
-.register_body #sendButton[disabled]{background-color:#eee;color:#999;}
+.register_body #send_Verification{width:30%;padding:2%;margin-bottom:1%;background-color:#8f5dbf;color:#fff;text-align:center;border-radius:0.3rem;float:right;font-size:0.54rem;}
+.register_body #send_Verification[disabled]{background-color:#eee;color:#999;}
 
 /*注册弹窗*/
 .shade{display:none;width: 100%; height: 100%; position:fixed; top:0; left: 0; background-color: #000; opacity: 0.6; filter: alpha(opacity=60); -ms-filter: "alpha(opacity=30)"; z-index: 135;}
@@ -156,6 +156,7 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .pop_search{width:94%;margin:2% auto;overflow:hidden;}
 .pop_search1{width:94%;margin:0 auto;overflow:hidden;}
 .pop_search i{margin-top:2%;float:right;display:block;width:1rem;height:1rem;background:url(../images/pop_se.png)no-repeat center center;background-color:#8f5dbf;border-radius:5px;background-size:70%;}
+.pop_search1 i{margin-top:2%;float:right;display:block;width:1rem;height:1rem;background:url(../images/pop_se.png)no-repeat center center;background-color:#8f5dbf;border-radius:5px;background-size:70%;}
 .pop_chose{width:94%;margin:4% auto;font-size:0.6rem;color:#333;border-bottom:1px solid #ddd;padding-bottom: 2%;}
 .chose_list{width:94%;margin:2% auto;font-size:0.54rem;color:#666;overflow:hidden;}
 .chose_list li{float:left;padding:2% 5%;}
@@ -181,7 +182,7 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .login_email{width:100%;height:2rem;margin:0 auto;background-color:#fff;border-bottom-left-radius:0.3rem;border-bottom-right-radius:0.3rem;z-index:115;position:relative;overflow:hidden;}
 .users{width:2rem;height:2rem;background:url(../images/users.png)no-repeat center center;background-color:#8f5dbf;background-size:40%;float:left;}
 .login_mm{width:2rem;height:2rem;background:url(../images/password.png)no-repeat center center;background-color:#8f5dbf;background-size:40%;float:left;}
-#login_input{width:80%;float:left;height:2rem;line-height:2rem;margin-top:0;font-size:0.6rem;text-indent:8px;}
+/*#login_input{width:80%;float:left;height:2rem;line-height:2rem;margin-top:0;font-size:0.6rem;text-indent:8px;}*/
 .login_tips{color:#d81e06;font-size:0.54rem;float:right;position:relative;margin-top:1%;}
 .login_btn{margin:4% auto;width:100%;height:2rem;background-color:#8f5dbf;color:#fff;font-size:0.6rem;line-height:2rem;text-align:center;border-radius:0.3rem;}
 .login_new{width:99%;margin:0 auto;height:2rem;border:2px solid #fff;color:#fff;font-size:0.6rem;line-height:2rem;text-align:center;border-radius:0.3rem;}
@@ -195,6 +196,8 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .book_logo{position:absolute;top:8%;left:0;z-index:115;}
 #body_login{width:100%;height:100%;background:url(../images/login_bg.png)no-repeat center center;background-size:100%;}
 .add_tips{color:#fff;font-size:0.6rem;float:left;position:relative;margin-top:1%;}
+#userName {width:80%;float:left;height:2rem;line-height:2rem;margin-top:0;font-size:0.6rem;text-indent:8px;}
+#password{width:80%;float:left;height:2rem;line-height:2rem;margin-top:0;font-size:0.6rem;text-indent:8px;}
 /*报考方向选择*/
 .direction{width:100%;height:auto;}
 .direction_list{width:94%;margin:2% auto;border-bottom:1px solid #ddd;overflow:hidden;padding:2% 0;}
@@ -297,6 +300,14 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .slide_down{float:left;margin-left: 5px;width:1rem;height:1rem;background:url(../images/slide.png)no-repeat center center;background-position:0 0;background-size:200%;}
 .slide_up{background-position:-1.2rem 0;}
 .slide_wz{white-space:normal !important;}
+
+/*忘记密码*/
+
+.login_tit{width:80%;height:auto;margin:0 auto;overflow:hidden;padding:3% 0;}
+.login_tit li{padding-bottom:2%;width:40%;float:left;font-size:0.7rem;color:#fff;text-align:center;list-style:none;}
+.login_tit li:nth-child(2){float:right;}
+.add_f{color:#8f5dbf !important;border-bottom:2px solid #8f5dbf;}
+
 /*自定义响应式*/
 @media only screen and (min-width:320px)  and (max-width:420px) {
 	.search{margin:2% 0 0 5%;}
