--- a/src/main/webapp/statics/css/appeditor/registration-page.css
+++ b/src/main/webapp/statics/css/appeditor/registration-page.css
@@ -1,10 +1,21 @@
 
 /*--------------------头部底部--------------------*/
+
 .reg-top {
     height: 110px;
     width: 100%;
     background-color: #0070c6;
 }
+.top_main ul{width:96%;overflow:hidden;margin:0 auto}
+.top_main ul li{font-size:14px;color:#fff;margin:10px 15px;float:left}
+.exit{font-size:14px;color:#fff;margin:10px 15px;float:right}
+.top{height:142px;width:100%;background-image:url(../../images/website/skins/23//top_bg.png);background-repeat:no-repeat;background-position:center}
+.top_main_right{text-align:right;float:right;height:30px;width:360px;padding:0;margin-top:29.5px;margin-right:2.5%;margin-bottom:0;margin-left:0;color:#FFF}
+.top_main{padding:0;height:110px;width:100%;margin-right:auto;margin-left:auto}
+.top_main_left{float:left;margin-left:2.5%;margin-top:29.5px}
+.top_main_right a{color:#FFF;text-decoration:none}
+.footer{width:100%;height:58px;background:url(../../images/website/skins/23//footer.png) no-repeat;margin-top:1%}
+.footer p{color:#f2f2f2;font-size:12px;line-height:58px;text-align:center}
 .reg-topmain{
     height: 110px;
     width: 1200px;
