--- a/src/main/webapp/statics/css/website/m/css/style.css
+++ b/src/main/webapp/statics/css/website/m/css/style.css
@@ -198,6 +198,7 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .add_tips{color:#fff;font-size:0.6rem;float:left;position:relative;margin-top:1%;}
 #userName {width:80%;float:left;height:2rem;line-height:2rem;margin-top:0;font-size:0.6rem;text-indent:8px;}
 #password{width:80%;float:left;height:2rem;line-height:2rem;margin-top:0;font-size:0.6rem;text-indent:8px;}
+.important_input{width:80% !important;float:left !important;height:2rem !important;line-height:2rem !important;margin-top:0 !important;font-size:0.6rem !important;text-indent:8px !important;}
 /*报考方向选择*/
 .direction{width:100%;height:auto;}
 .direction_list{width:94%;margin:2% auto;border-bottom:1px solid #ddd;overflow:hidden;padding:2% 0;}
@@ -208,8 +209,9 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 /*报考中心*/
 .none{display: block;max-width:30%;height: auto;width: 100%;margin:20% auto 5%;}
 .none_tips{color:#999;font-size:0.58rem;text-align:center;}
+.none_tips a{display:inline-block;color:#8f5dbf;}
 .new_btn{width:45%;padding:4% 0;text-align: center;margin:10% auto;font-size:0.58rem;color:#9363c1;border:2px solid #8f5dbf;border-radius:0.3rem;}
-
+ 
 /*报考自测*/
 .test_body{width:94%;margin:2% auto;font-size:0.56rem;color:#666;}
 .test_body p{text-indent:1rem;line-height:1rem;}
