--- a/src/main/webapp/statics/css/website/m/css/style.css
+++ b/src/main/webapp/statics/css/website/m/css/style.css
@@ -192,6 +192,9 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .login_forget{float:left;overflow:hidden;}
 .login_forget i{float:left;width:1rem;height:1rem;background:url(../images/forget.png)no-repeat center center;background-size:90%;}
 .login_forget span{float:left;color:#fff;font-size:0.54rem;margin-left:3px;line-height:1rem;}
+.account_active{float:left;overflow:hidden;}
+.account_active i{float:left;width:1rem;height:1rem;background:url(../images/jh.png)no-repeat center center;background-size:90%;}
+.account_active span{float:left;color:#fff;font-size:0.54rem;margin-left:3px;line-height:1rem;}
 .login_help{float:right;overflow:hidden;}
 .login_help i{float:left;width:1rem;height:1rem;background:url(../images/help.png)no-repeat center center;background-size:90%;}
 .login_help span{float:left;color:#fff;font-size:0.54rem;margin-left:3px;line-height:1rem;}
