--- a/src/main/webapp/statics/css/website/m/css/style.css
+++ b/src/main/webapp/statics/css/website/m/css/style.css
@@ -146,8 +146,7 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .register_body #send_Verification{width:30%;padding:2%;margin-bottom:1%;background-color:#8f5dbf;color:#fff;text-align:center;border-radius:0.3rem;float:right;font-size:0.54rem;}
 .register_body #send_Verification[disabled]{background-color:#eee;color:#999;}
  #sendBtn{width:30%;height:1.4rem;line-height:1.4rem;margin: 0.3rem 2% 0 0;background-color:#8f5dbf;color:#fff;text-align:center;border-radius:0.3rem;float:right;font-size:0.54rem;}
-#sendBtn[disabled]{background-color:#eee;color:#999;}
-
+#sendBtn[disabled]{background-color:#ddd;color:#999;}
 /*注册弹窗*/
 .shade{display:none;width: 100%; height: 100%; position:fixed; top:0; left: 0; background-color: #000; opacity: 0.6; filter: alpha(opacity=60); -ms-filter: "alpha(opacity=30)"; z-index: 135;}
 .country_pop{display:none;width:90%;height:auto;position:fixed;z-index:150;top:15%;left:5%;background-color:#fff;border-radius:0.3rem;}
@@ -179,7 +178,7 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .select-s1 .option a:hover{background:#ffda44;text-decoration:none; color: #333;}
 
 /*登录*/
-.login_ab{width:90%;height:auto;position:absolute;top:36%;left:5%;z-index: 115;}
+.login_ab{width:90%;height:auto;position:fixed;top:36%;left:5%;z-index: 115;}
 .login_account{width:100%;height:2rem;margin:0 auto;background-color:#fff;border-top-left-radius:0.3rem;border-top-right-radius:0.3rem;z-index:115;position:relative;border-bottom:1px solid #ddd;overflow:hidden;}
 .login_email{width:100%;height:2rem;margin:0 auto;background-color:#fff;border-bottom-left-radius:0.3rem;border-bottom-right-radius:0.3rem;z-index:115;position:relative;overflow:hidden;}
 .users{width:2rem;height:2rem;background:url(../images/users.png)no-repeat center center;background-color:#8f5dbf;background-size:40%;float:left;}
@@ -323,6 +322,12 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .bottom_btn{position:fixed;bottom:0;left:0;width:100%;padding:2% 0;text-align:center;color:#fff;background-color:#8f5dbf;font-size:0.6rem;display:block;}
 .bottom_btn_left{position:fixed;bottom:0;left:0;width:50%;padding:2% 0;text-align:center;color:#666;background-color:#ddd;font-size:0.6rem;display:block;}
 .bottom_btn_right{position:fixed;bottom:0;right:0;width:50%;padding:2% 0;text-align:center;color:#f25050;background-color:#ddd;font-size:0.6rem;display:block;}
+
+/*帮助中心*/
+.question_body{width:94%;margin:2% auto;font-size:0.56rem;line-height:1rem;}
+.question{margin:2% auto;}
+.question span{display:block;width:100%;border-bottom:1px solid #ddd;color:#333;font-size:0.56rem;padding:1% 0;}
+.question p{text-indent:2em;color:#999;font-size:0.58rem;}
 /*自定义响应式*/
 @media only screen and (min-width:320px)  and (max-width:420px) {
 	.search{margin:2% 0 0 5%;}
@@ -333,12 +338,6 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 @media only screen and (min-width:640px)  and (max-width:750px) {
 	
 }
-
-/*帮助中心*/
-.question_body{width:94%;margin:2% auto;font-size:0.56rem;line-height:1rem;}
-.question{margin:2% auto;}
-.question span{display:block;width:100%;border-bottom:1px solid #ddd;color:#333;font-size:0.56rem;padding:1% 0;}
-.question p{text-indent:2em;color:#999;font-size:0.58rem;}
 
 
 
