--- a/src/main/webapp/statics/css/website/m/css/date.css
+++ b/src/main/webapp/statics/css/website/m/css/date.css
@@ -26,7 +26,7 @@
 #dateconfirm{position: absolute;background:#8f5dbf;left:20px;color:#fff;}
 #datecancle{position: absolute;background:  #dcdddd;right:20px;width: 40%;color:#666;}
 #dateshadow{display: none;width: 100%; height: 100%; position: fixed; top: 0; left: 0; background-color: #000; opacity: 0.6; filter: alpha(opacity=60); -ms-filter: "alpha(opacity=60)"; z-index: 115;}
-#datePage{font-size: 22px; border-radius: 3px; position:absolute;top:110px;MARGIN-RIGHT: auto;vertical-align:middle;
+#datePage{font-size: 22px; border-radius: 3px; position:fixed;top:110px;MARGIN-RIGHT: auto;vertical-align:middle;
 MARGIN-LEFT: auto;width: 80%;;height: 240px;background: #FFFFFF;z-index:9999999;}
 #datetitle{width: 100%;height:50px;background: #8f5dbf;text-align: center;color: #fff;line-height: 50px;font-size: 20px;font-family:'microsoft yahei';}
 #datetitle h1{font-size: 0.56rem;}
