手机版奖学金 + 自动补全

--- a/src/main/webapp/statics/js/onlineSurvey/css/m/index.css
+++ b/src/main/webapp/statics/js/onlineSurvey/css/m/index.css
@@ -357,3 +357,8 @@
 .input-checkbox-btn.checked{
 	background-image: url(../../images/checkbox_on.png);
 }
+.ui-autocomplete{
+	max-height:280px;
+	overflow-y:auto;
+	overflow-x:hidden;
+}
