--- a/src/main/webapp/statics/css/website/m/css/style.css
+++ b/src/main/webapp/statics/css/website/m/css/style.css
@@ -243,7 +243,7 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .rili{width:14%;height:auto;border:1px solid #f4edf9;float:left;}
 .rili span{display:block;width:100%;padding:10% 0;color:#fff;font-size:0.8rem;text-align:center;background-color:#8f5dbf;}
 .rili p{display:block;width:100%;padding:5% 0;color:#666;font-size:0.5rem;text-align:center;}
-.rili_sm{width: 82%;float:left;margin-left:2%;color:#666;font-size:0.54rem;}
+.rili_sm{width: 82%;float:left;margin-left:2%;color:#666;font-size:0.54rem;margin-bottom:2%;}
 
 /*申请奖学金*/
 .tit_tab{width:100%;height:auto;background-color:#fff;overflow:hidden;}
