--- a/src/main/webapp/statics/css/appeditor/registration-page.css
+++ b/src/main/webapp/statics/css/appeditor/registration-page.css
@@ -223,6 +223,15 @@
 	height:46px;
 	line-height:46px;
 }
+.input-list-infoupload{
+	width:35%;
+	text-align:right;
+	font-size:16px;
+	color:#666;	
+	height:46px;
+	line-height:46px;
+	margin:10px auto;
+}
 .input-list-infowrap{
 	width:35%;
 	text-align:right;
@@ -1041,8 +1050,9 @@ url("chrome://browser/content/history/history-panel.xul")
 	display: block;
     float: left;
     font-size: 16px;
-    height: 35px;
+    height: 46px;
     line-height: 35px;
+    margin-left:20px;
 }
 
 /*附件后缀*/
@@ -1059,10 +1069,10 @@ url("chrome://browser/content/history/history-panel.xul")
 }
 
 .input-list-uploadcon-listl{
-	width:60%;
+	width:75%;
 }
 .input-list-uploadcon-listr{
-	width:40%;
+	width:5%;
 	height: 35px;
     line-height: 35px;
 }
@@ -1132,6 +1142,13 @@ url("chrome://browser/content/history/history-panel.xul")
 
 /*表单填写说明css*/
 .form_sm{padding:5px 10px;width:150px;text-align:center;}
-.form_input{width:750px;height:400px;overflow-y:auto;border:1px solid #0070c6;display:none;}
+.form_input {
+    width: 750px;
+    height: 400px;
+    overflow-y: auto;
+    border: 1px solid #0070c6;
+    display: none;
+    padding: 10px;
+    background-color: #fff;}
 .readme{width:150px;margin: 5px 0 0 0;}
 .tips{margin:0px 4px 0 0;vertical-align:middle;}
