--- a/src/main/webapp/statics/css/website/m/css/style.css
+++ b/src/main/webapp/statics/css/website/m/css/style.css
@@ -154,7 +154,7 @@ a,a:hover{text-decoration: none;display: block;}
 .register{width:94%;margin:0 auto;padding-bottom: 3%;}
 .register_body{width:100%;padding:4% 0 0 0;border-bottom:1px solid #ddd;}
 .register_body p{color:#8f5dbf;font-size:0.54rem;}
-input[type="text"],input[type="password"]{width:90%;float:left;border:none;height:1rem;font-size:0.54rem;color:#333;line-height:1rem;margin-top:2%;background-color:transparent;-moz-appearance:none;-webkit-appearance:none; }
+input[type="text"],input[type="password"]{width:90%;float:left;border:none;height:1.5rem;font-size:0.54rem;color:#333;line-height:1rem;margin-top:2%;background-color:transparent;-moz-appearance:none;-webkit-appearance:none; }
 input[type="text"],input[type="password"]:focus{border:none;}
 .reg_right{display:block;max-width:5%;height: auto;width: 100%;float:right;/* margin-top:2%; */}
 .reg_code{display:block;max-width:15%;height: auto;width: 100%;float:right;margin-top:2%;}
@@ -191,7 +191,7 @@ input[type="button"]{ border:none;appearance: none; -webkit-appearance: none; bo
 .chose_list{width:94%;margin:2% auto;font-size:0.54rem;color:#666;overflow:hidden;}
 .chose_list li{float:left;padding:2% 5%;}
 .chose_on{color:#8f5dbf;}
-.country_list{width:94%;margin:2% auto;font-size:0.54rem;color:#666;}
+.country_list{width:94%;margin:2% auto;font-size:0.54rem;color:#666;height:150px;overflow:auto;}
 .country_list li{padding:2% 0 2% 5%;}
 /* .country_list{width:94%;margin:2% auto;font-size:0.54rem;color:#666;height:100px;overflow-y:auto;}
 .country_list li{padding:2% 0 0 5%;} */
