--- a/src/main/webapp/statics/css/evaluation/default.css
+++ b/src/main/webapp/statics/css/evaluation/default.css
@@ -109,7 +109,7 @@ v\:* { behavior: url(#default#VML); }
     width: 100%;
     height: 58px;
     background: url(../../images/evaluation/footer.png) no-repeat;
-    margin-top: 1%;
+    /*margin-top: 1%;*/
 }
 .footer p {
     color: #f2f2f2;
