--- a/src/main/webapp/statics/css/website/m/css/dialog.css
+++ b/src/main/webapp/statics/css/website/m/css/dialog.css
@@ -151,7 +151,7 @@
   outline: none;
   cursor: pointer;
   box-sizing: border-box;
-  padding: 0; }
+  padding: 0; font-size: 0.8rem;}
 .ui-dialog-action .ui-confirm-close, .ui-dialog-action .ui-confirm-no {
   color: #747474;
   border-left: 1px solid #dcdcdc; }
