--- a/src/main/webapp/statics/css/website/m/css/style.css
+++ b/src/main/webapp/statics/css/website/m/css/style.css
@@ -19,6 +19,11 @@ a,a:hover{text-decoration: none;display: block;}
 .bg{width:100%;position:relative;background-color:#e4e4e4;height:auto;}
 .top{position:relative;}
 .logout{display:block;position:absolute;font-size:0.5rem;color:#2d5c9f;bottom:0.4rem;right: 0.2rem;}
+/**激活按钮*/
+.account_active{float:left;overflow:hidden;margin-left: 18%;}
+.account_active i{float:left;width:1rem;height:1rem;background:url(../images/jihuo.png)no-repeat center center;background-size:90%;}
+.account_active span{float:left;color:#d81e06;font-size:0.54rem;margin-left:3px;line-height:1rem;} 
+
 /*个人信息*/
 .personal_infor{width:100%;height:auto;background-color:#fff;overflow: hidden;padding-bottom: 10px;}
 .inner{width:82%;height: auto;float: left;overflow:hidden;margin:2% 0 0 0;border-right:1px solid #eee;}
