--- a/src/main/webapp/statics/css/website/m/css/style.css
+++ b/src/main/webapp/statics/css/website/m/css/style.css
@@ -20,9 +20,7 @@ a,a:hover{text-decoration: none;display: block;}
 .top{position:relative;}
 .logout{display:block;position:absolute;font-size:0.5rem;color:#2d5c9f;bottom:0.4rem;right: 0.2rem;}
 /**激活按钮*/
-.account_active{float:left;overflow:hidden;margin-left: 18%;}
-.account_active i{float:left;width:1rem;height:1rem;background:url(../images/jihuo.png)no-repeat center center;background-size:90%;}
-.account_active span{float:left;color:#d81e06;font-size:0.54rem;margin-left:3px;line-height:1rem;} 
+ 
 
 /*个人信息*/
 .personal_infor{width:100%;height:auto;background-color:#fff;overflow: hidden;padding-bottom: 10px;}
@@ -227,6 +225,11 @@ select{appearance:none;-moz-appearance:none;-webkit-appearance:none;border:none;
 .login_forget{float:left;overflow:hidden;}
 .login_forget i{float:left;width:1rem;height:1rem;background:url(../images/forget.png)no-repeat center center;background-size:90%;}
 .login_forget span{float:left;color:#8f5dbf;font-size:0.54rem;margin-left:3px;line-height:1rem;}
+/**激活按钮**/
+.account_active{float:left;overflow:hidden;margin-left: 18% !important;}
+.account_active i{float:left;width:1rem;height:1rem;background:url(../images/jihuo.png)no-repeat center center;background-size:90%;}
+.account_active span{float:left;color:#8f5dbf;font-size:0.54rem;margin-left:3px;line-height:1rem;}
+
 .login_help{float:right;overflow:hidden;}
 .login_help i{float:left;width:1rem;height:1rem;background:url(../images/help.png)no-repeat center center;background-size:90%;}
 .login_help span{float:left;color:#8f5dbf;font-size:0.54rem;margin-left:3px;line-height:1rem;}
