--- a/src/main/webapp/statics/css/website/m/css/style.css
+++ b/src/main/webapp/statics/css/website/m/css/style.css
@@ -226,9 +226,9 @@ select{appearance:none;-moz-appearance:none;-webkit-appearance:none;border:none;
 .login_forget i{float:left;width:1rem;height:1rem;background:url(../images/forget.png)no-repeat center center;background-size:90%;}
 .login_forget span{float:left;color:#8f5dbf;font-size:0.54rem;margin-left:3px;line-height:1rem;}
 /**激活按钮**/
-.account_active{float:left;overflow:hidden;margin-left: 18% !important;}
+.account_active{float:left;overflow:hidden;margin-left:18% !important;}
 .account_active i{float:left;width:1rem;height:1rem;background:url(../images/jihuo.png)no-repeat center center;background-size:90%;}
-.account_active span{float:left;color:#8f5dbf;font-size:0.54rem;margin-left:3px;line-height:1rem;}
+.account_active span{float:left;color:#d81e06;font-size:0.54rem;margin-left:3px;line-height:1rem;}
 
 .login_help{float:right;overflow:hidden;}
 .login_help i{float:left;width:1rem;height:1rem;background:url(../images/help.png)no-repeat center center;background-size:90%;}
