--- a/src/main/webapp/statics/js/onlineSurvey/css/index.css
+++ b/src/main/webapp/statics/js/onlineSurvey/css/index.css
@@ -76,6 +76,7 @@
 /*下拉页面结束*/
 .uploadlogo{
 	/*padding:20px;*/
+	padding:0 2px;
 }
 .maincon{
 	padding:0 20px;
@@ -172,7 +173,8 @@
 	display:inline-block
 }
 .fotter{
-	padding:40px 20px 20px 20px;
+	/*padding:40px 20px 20px 20px;*/
+	padding:40px 2px 0px 2px;
 	color:#555;
 }
 .submit{
