--- a/src/main/webapp/statics/js/onlineSurvey/css/m/index.css
+++ b/src/main/webapp/statics/js/onlineSurvey/css/m/index.css
@@ -1,7 +1,7 @@
 
 .container{
 	/*max-width: 640px;*/
-	width:100%;
+	width:98%;
 	margin:0 auto;
 	#background:#f7f7f7;
 	background:white;
@@ -73,7 +73,8 @@
 }
 .uploadlogo{
 	/*padding:10px;*/
-	margin: 10px 0;
+	/*margin: 10px 0;*/
+	padding:0px 2px;
 }
 .maincon{
 	padding:0 2px;
@@ -198,7 +199,8 @@
 }
 .fotter{
 	text-align: center;
-	padding:40px 10px 10px 10px;
+	/*padding:40px 10px 10px 10px;*/
+	padding:40px 2px 0px 2px;
 	color:#555;
 }
 .submit{
