--- a/src/main/webapp/statics/css/kitchensink/theme-tranzvision/resources/KitchenSink-all_02.css
+++ b/src/main/webapp/statics/css/kitchensink/theme-tranzvision/resources/KitchenSink-all_02.css
@@ -78,3 +78,6 @@
 .x-grid-cell-inner img.prjNew{background: url(/tranzvision/kitchensink/app/view/home/images/TZ_PRG_NEW.png) no-repeat center center;}
 
 .x-grid-cell-inner img.x-action-col-icon{background-size: 16px 16px}
+
+.x-toolbar-default,.x-grid-header-ct-default{z-index: 100!important}
+.x-panel-header{z-index: 200!important}
