--- a/src/main/webapp/statics/css/evaluation/default.css
+++ b/src/main/webapp/statics/css/evaluation/default.css
@@ -82,7 +82,7 @@ v\:* { behavior: url(#default#VML); }
     margin-bottom: 0px;
     margin-left: auto;
     height: auto;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .top_main {
     padding: 0px;
@@ -128,4 +128,7 @@ v\:* { behavior: url(#default#VML); }
 }
 .x-grid-td {
     vertical-align: middle!important;
+}
+.x-mask{
+	z-index:200!important;
 }
