--- a/src/main/webapp/statics/css/evaluation/default.css
+++ b/src/main/webapp/statics/css/evaluation/default.css
@@ -131,3 +131,43 @@ v\:* { behavior: url(#default#VML); }
 .x-mask{
 	z-index:200!important;
 }
+
+/*Tip Style*/
+.ui-tooltip{
+	-webkit-border-radius: 2px!important;
+    border-radius: 2px!important;
+    -webkit-box-shadow: 0 0 12px #999!important;
+    -moz-box-shadow: 0 0 12px #999!important;
+    box-shadow: 0 0 12px #999!important;
+}
+.ui-tooltip-wiki{
+	max-width:1050px!important;
+}
+.ui-tooltip-content{
+	max-height:500px!important;
+	overflow-y:auto!important;
+	padding:8px!important;
+}
+.ui-tooltip-tipped {
+    border: 2px solid #e6e6e6!important;
+    }
+.ui-tooltip-title{
+	color:#773fae!important;
+	}
+.ui-tooltip-tipped .ui-tooltip-titlebar {
+	padding-top:12px;
+	height:15px;
+	font-weight:normal;
+	font-size:15px!important;
+    border-bottom-width: 0!important;
+    color: white!important;
+    background: #e6e6e6!important;
+    background-image: -moz-linear-gradient(top,#e6e6e6,#e6e6e6)!important;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#e6e6e6),to(#e6e6e6))!important;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#e6e6e6,endColorstr=#e6e6e6)!important;
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#e6e6e6,endColorstr=#e6e6e6)"!important;
+}
+.ui-tooltip-tipped .ui-tooltip-icon {
+    border: 2px solid #e6e6e6!important;
+    background: #e6e6e6!important;
+}
